--- a/20201861_오승필.md
+++ b/20201861_오승필.md
@@ -72,14 +72,14 @@ I think I'll use it to format all of my documents from now on.
 
 | Markdown |
 ```
-This is the first line.  
-And this is the second line.
+This is the zero line.  
+And this is the first line.
 ```
 
 | 출력 결과 |  
 
-    This is the first line.  
-    And this is the second line.
+    This is the zero line.  
+    And this is the first line.
 
 #### 3.2 주의 사항⚠️
 거의 모든 markdowm application에서 줄 바꿈을 두 개 이상의 공백을 사용하여 할 수 있지만, 이것은 논란이 많습니다. 편집기에서 trailing whitespace( 줄의 끝이 공백으로 끝나는 경우)를 보기는 어렵고, 많은 사람들은 실수로 또는 의도적으로 모든 문장뒤에 두 칸 씩을 띄워 놓습니다. 따라서 줄 바꿈에 `<br> HTML 태그`를 사용할 수도 있습니다.
