--- a/20201861_오승필.md
+++ b/20201861_오승필.md
@@ -85,7 +85,7 @@ And this is the first line.
 거의 모든 markdowm application에서 줄 바꿈을 두 개 이상의 공백을 사용하여 할 수 있지만, 이것은 논란이 많습니다. 편집기에서 trailing whitespace( 줄의 끝이 공백으로 끝나는 경우)를 보기는 어렵고, 많은 사람들은 실수로 또는 의도적으로 모든 문장뒤에 두 칸 씩을 띄워 놓습니다. 따라서 줄 바꿈에 `<br> HTML 태그`를 사용할 수도 있습니다.
 
 ### 4. 강조(Emphasis)
-텍스트를 `굵게(볼드체`) 또는 `기울임꼴(이탤릭체)`로 만들어 강조 표시를 추가할 수 있습니다.
+텍스트를 `굵게(볼드체)' 또는 `기울임꼴(이탤릭체)`로 만들어 강조 표시를 추가할 수 있습니다.
 
 #### 4.1 볼드체(Bold)
 > - 굵은 글꼴을 사용하려면 `단어 또는 구 앞뒤에 두 개의 별표 또는 밑줄`을 추가합니다.
