--- a/20201861_오승필.md
+++ b/20201861_오승필.md
@@ -44,7 +44,7 @@ Heading level 2
 ---------- 
 
 #### 1.3 주의 사항⚠️  
-Markdown application은 숫자 기호(#)과 제목 이름 사이의 누락된 공백을 처리하는 방법에 동의하지 않습니다. 호환성을 위해서, `항상 숫자 기호와 제목 이름 사이에 공백`을 두어야 합니다.
+Markdown application은 숫자 기호(#)과 제목 이름 사이의 누락된 공백을 처리하지 못합니다. 호환성을 위해서, `항상 숫자 기호와 제목 이름 사이에 공백`을 두어야 합니다.
 
 ### 2. 문단 (Paragraphs)
 #### 2.1 빈 줄
